fixed text alignment on name/links

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1 {
 	color:#3B3B3B;
 	font-family: 'Oxygen', sans-serif;
 	font-size: 70px;
+	font-weight: 300;
 	line-height: 0.2;
 	margin-top:250px;
 	text-align: center;
